[package]
name = "gst_examples"
version = "0.1.0"
authors = ["Albert Cheung <albert.cheung@harmonicinc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "0.18.6"
gstreamer-player = "0.18.0"
anyhow = "1.0.56"
glib = "0.15.10"
cocoa = "0.24.0"

# basic-tutorial-5
gtk = "0.15.4"
gstreamer-video = "0.18.7"

# basic-tutorial-8
byte-slice-cast = "1.2.1"
gstreamer-app = "0.18.7"
gstreamer-audio = "0.18.7"

# basic-tutorial-9
gstreamer-pbutils = "0.18.7"

# basic-tutorial-13
termion = "1.5.6"

# transmux
derive_more = "0.99.17"

# thumbnail
image = "0.24.1"
